Initial full commit

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
             <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta name="theme-color" content="#1976D2">
+            <link rel="icon" sizes="192x192" href="icon.png">
         </head>
     
         <body>
@@ -55,7 +57,8 @@
                         <h2>Sites</h2>
                         <p>
                                 LinkedIn: <br>
-                                Github Repo: <br>
+                                Github Repo: <a target="_blank" href="https://github.com/RussellWaterson">
+                                    https://github.com/RussellWaterson</a><br>
                                 Android Dev Profile: <a target="_blank" href="https://play.google.com/store/apps/developer?id=Russell+Waterson">
                                     https://play.google.com/store/apps/developer?id=Russell+Waterson</a><br>
                                 Athletics Profile: <a target="_blank" href="https://www.thepowerof10.info/athletes/profile.aspx?athleteid=48676">
@@ -65,7 +68,7 @@
                     <div class="card">
                         <h2>Files of Interest</h2>
                         <p>
-                                <a href="#">Curriculum Vitae</a>
+                            <a href="#">Curriculum Vitae</a>
                         </p>
                     </div>
                 </div>
@@ -83,11 +86,11 @@
                     <span class="tooltiptext">Email Me</span>
                 </div>
                 <div class="tooltip">
-                    <i class="fab fa-github"></i>
+                    <a target="_blank" href="https://github.com/RussellWaterson"><i class="fab fa-github"></i></a>
                     <span class="tooltiptext">GitHub</span>
                 </div>
                 <div class="tooltip">
-                    <i class="fas fa-file"></i>
+                    <a href="#"><i class="fas fa-file"></i></a>
                     <span class="tooltiptext">Download CV</span>
                 </div>
             </div>
