--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
             <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta name="theme-color" content="#1976D2">
+            <link rel="icon" sizes="192x192" href="icon.png">
         </head>
     
         <body>
@@ -52,7 +54,7 @@
                 <div class="wholetimeline">
                     <p onclick="myScrollLeft()"><i class="left"></i></p>
                     <div class="timeline" id="myTimeline">
-                        <img src="timeline.png" width="1329" height="201">
+                        <img src="timeline.png" width="2021" height="274">
                     </div>
                     <p onclick="myScrollRight()"><i class="right"></i></p>
                 </div>
@@ -96,11 +98,11 @@
                     <span class="tooltiptext">Email Me</span>
                 </div>
                 <div class="tooltip">
-                    <i class="fab fa-github"></i>
+                    <a target="_blank" href="https://github.com/RussellWaterson"><i class="fab fa-github"></i></a>
                     <span class="tooltiptext">GitHub</span>
                 </div>
                 <div class="tooltip">
-                        <i class="fas fa-file"></i>
+                    <a href="#"><i class="fas fa-file"></i></a>
                     <span class="tooltiptext">Download CV</span>
                 </div>
             </div>
