--- a/personal.html
+++ b/personal.html
@@ -74,7 +74,7 @@
                                     <p><i class="down"></i></p>
                                 </div>
                                 <div class="collapsible-content">
-                                    <p>• Unofficial  Vice  Track  and  Field  Captain  for  University  of  Birmingham’s  athletics  team <em>(2016-2017)</em></p>
+                                    <p>• Vice  Track  and  Field  Captain  for  University  of  Birmingham’s  athletics  team <em>(2016-2017)</em></p>
                                     <p>• Athletics  Captain  for  Windsor  Slough  Eton  &  Hounslow  Youth  Development  Team <em>(2014)</em></p>
                                     <p>• School  Athletics  Captain  during  Years  12  and  13 <em>(2011-2013)</em></p>
                                     <p>• Full  Colours  for  Athletics <em>(2012)</em></p>
@@ -154,19 +154,22 @@
             <div class="footer">
                 <p>Designed and Created by Russell Waterson © 2018</p>
                 <div class="tooltip">
-                    <i class="fab fa-linkedin"></i>
+                    <a target="_blank" href="https://www.linkedin.com/in/russellwaterson/">
+                        <i class="fab fa-linkedin"></i></a>
                     <span class="tooltiptext">LinkedIn</span>
                 </div>
                 <div class="tooltip">
-                    <a href="mailto:russ.waterson@gmail.com" target="_top"><i class="fas fa-envelope"></i></a>
-                    <span class="tooltiptext">Email Me</span>
+                    <a target="_blank" href="https://play.google.com/store/apps/developer?id=Russell+Waterson">
+                        <i class="fab fa-google-play"></i></a>
+                    <span class="tooltiptext">Google Play Store Page</span>
                 </div>
                 <div class="tooltip">
                     <a target="_blank" href="https://github.com/RussellWaterson"><i class="fab fa-github"></i></a>
                     <span class="tooltiptext">GitHub</span>
                 </div>
                 <div class="tooltip">
-                    <a href="#"><i class="fas fa-file"></i></a>
+                    <a target="_blank" href="RUSSELL%20JAMES%20WATERSON%20CV.pdf">
+                        <i class="fas fa-file"></i></a>
                     <span class="tooltiptext">Download CV</span>
                 </div>
             </div>
