--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,8 @@
                     <div class="card">
                         <h2>Sites</h2>
                         <p>
-                                LinkedIn: <br>
+                                LinkedIn: <a target="_blank" href="https://www.linkedin.com/in/russellwaterson/">
+                                    https://www.linkedin.com/in/russellwaterson</a><br>
                                 Github Repo: <a target="_blank" href="https://github.com/RussellWaterson">
                                     https://github.com/RussellWaterson</a><br>
                                 Android Dev Profile: <a target="_blank" href="https://play.google.com/store/apps/developer?id=Russell+Waterson">
@@ -68,7 +69,7 @@
                     <div class="card">
                         <h2>Files of Interest</h2>
                         <p>
-                            <a href="#">Curriculum Vitae</a>
+                            <a target="_blank" href="RUSSELL%20JAMES%20WATERSON%20CV.pdf">Curriculum Vitae</a>
                         </p>
                     </div>
                 </div>
@@ -78,19 +79,22 @@
             <div class="footer">
                 <p>Designed and Created by Russell Waterson © 2018</p>
                 <div class="tooltip">
-                    <i class="fab fa-linkedin"></i>
+                    <a target="_blank" href="https://www.linkedin.com/in/russellwaterson/">
+                        <i class="fab fa-linkedin"></i></a>
                     <span class="tooltiptext">LinkedIn</span>
                 </div>
                 <div class="tooltip">
-                    <a href="mailto:russ.waterson@gmail.com" target="_top"><i class="fas fa-envelope"></i></a>
-                    <span class="tooltiptext">Email Me</span>
+                    <a target="_blank" href="https://play.google.com/store/apps/developer?id=Russell+Waterson">
+                        <i class="fab fa-google-play"></i></a>
+                    <span class="tooltiptext">Google Play Store Page</span>
                 </div>
                 <div class="tooltip">
                     <a target="_blank" href="https://github.com/RussellWaterson"><i class="fab fa-github"></i></a>
                     <span class="tooltiptext">GitHub</span>
                 </div>
                 <div class="tooltip">
-                    <a href="#"><i class="fas fa-file"></i></a>
+                    <a target="_blank" href="RUSSELL%20JAMES%20WATERSON%20CV.pdf">
+                        <i class="fas fa-file"></i></a>
                     <span class="tooltiptext">Download CV</span>
                 </div>
             </div>
