--- a/work.html
+++ b/work.html
@@ -50,7 +50,7 @@
                     
                     <div class="card">
                         <h3>THOMSON REUTERS — Junior Software Engineer</h3>
-                        <h5>September 2015 - September 2016</h5>
+                        <h5>August 2015 - August 2016</h5>
                         <p>Undertook a wide variety of tasks within my team, including the creation of functional tests (using Robot Framework), 
                             the implementation of brand new components of a new system (written in Java), and the writing of scripts (in Bash, 
                             Python, and Perl) to perform numerous jobs including cron jobs.</p>
@@ -226,19 +226,22 @@
             <div class="footer">
                 <p>Designed and Created by Russell Waterson © 2018</p>
                 <div class="tooltip">
-                    <i class="fab fa-linkedin"></i>
+                    <a target="_blank" href="https://www.linkedin.com/in/russellwaterson/">
+                        <i class="fab fa-linkedin"></i></a>
                     <span class="tooltiptext">LinkedIn</span>
                 </div>
                 <div class="tooltip">
-                    <a href="mailto:russ.waterson@gmail.com" target="_top"><i class="fas fa-envelope"></i></a>
-                    <span class="tooltiptext">Email Me</span>
+                    <a target="_blank" href="https://play.google.com/store/apps/developer?id=Russell+Waterson">
+                        <i class="fab fa-google-play"></i></a>
+                    <span class="tooltiptext">Google Play Store Page</span>
                 </div>
                 <div class="tooltip">
                     <a target="_blank" href="https://github.com/RussellWaterson"><i class="fab fa-github"></i></a>
                     <span class="tooltiptext">GitHub</span>
                 </div>
                 <div class="tooltip">
-                    <a href="#"><i class="fas fa-file"></i></a>
+                    <a target="_blank" href="RUSSELL%20JAMES%20WATERSON%20CV.pdf">
+                        <i class="fas fa-file"></i></a>
                     <span class="tooltiptext">Download CV</span>
                 </div>
             </div>
