Quick access links

--- a/index.html
+++ b/index.html
@@ -60,6 +60,44 @@
                 </div>
                 <p><br><br></p>
 
+                <h2>Quick Access</h2>
+                <div class="row">
+                    <div class="columnquickaccess">
+                        <a target="_blank" href="RUSSELL%20JAMES%20WATERSON%20CV.pdf">
+                            <div class="cardquickaccess">
+                                <i class="fas fa-file-download"></i>
+                                <h3>CV</h3>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="columnquickaccess">
+                        <a target="_blank" href="https://www.linkedin.com/in/russellwaterson/">
+                            <div class="cardquickaccess">
+                                <i class="fab fa-linkedin"></i>
+                                <h3>LinkedIn</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="columnquickaccess">
+                        <a target="_blank" href="https://play.google.com/store/apps/developer?id=Russell+Waterson">
+                            <div class="cardquickaccess">
+                                <i class="fab fa-google-play"></i>
+                                <h3>Play Store</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="columnquickaccess">
+                        <a target="_blank" href="https://github.com/RussellWaterson">
+                            <div class="cardquickaccess">
+                                <i class="fab fa-github"></i>
+                                <h3>Github</h3>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <p><br></p>
+
                 <h2>Technical Skills</h2>
 
                 <div class="row">
