Updated work reflecting new job at Semantic Integration

--- a/work.html
+++ b/work.html
@@ -49,6 +49,12 @@
                 <div class="row">
                     
                     <div class="card">
+                        <h3>SEMANTIC INTEGRATION — Software Developer</h3>
+                        <h5>November 2018 - Current</h5>
+                        <p>Data driven software solutions helping realise the power of data. Expertise in: Open Linked Data Integration, Semantic Web, Data Driven Solutions, Graph Databases, Natural Language Processing, Big Data, Enterprise Architecture, Enterprise Solutions</p>
+                    </div>
+                    
+                    <div class="card">
                         <h3>THOMSON REUTERS — Junior Software Engineer</h3>
                         <h5>August 2015 - August 2016</h5>
                         <p>Undertook a wide variety of tasks within my team, including the creation of functional tests (using Robot Framework), 
