Updated Data Lens work, developement skills, and timeline

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 <div class="wholetimeline">
                     <p onclick="myScrollLeft()"><i class="left"></i></p>
                     <div class="timeline" id="myTimeline">
-                        <img src="timeline.png" width="2021" height="274">
+                        <img src="timeline.png" width="2343" height="275">
+                        
                     </div>
                     <p onclick="myScrollRight()"><i class="right"></i></p>
                 </div>
@@ -102,24 +103,44 @@
 
                 <div class="row">
                     <div class="card">
-                        <h3>Competent In:</h3>
-                        <p><b>• Java</b> – extensive experience, in a professional, educational, and personal setting</p>
-                        <p><b>• Android App Development</b> (incorporating Java, XML, SQL, and Google APIs)</p>
-                        <p><b>• Dev Team Tools:</b> Git, (GitHub and GitLab), SVN, Jira, Confluence, GitHub Flavoured Markdown</p>
-                        <p><b>• Web Development Tools:</b> XML, HTML, XHTML, CSS, JavaScript, AJAX, JSON</p>
+                        <h3>BACKEND TECHNOLOGIES</h3>
+                        <p><b>• Java:</b> Extensive experience with over 2 and a half years in a professional work environment and over 3 years in an
+                            educational environment, all whilst accompanied with development in personal side projects. Hands on experience
+                            with popular frameworks including <b>Spring Boot</b> and <b>Dropwizard</b>.</p>
+                        <p><b>• Testing:</b> Test Driven Development, JUnit4, JMockit, Cucumber Behavioural Tests using Gherkin, Robot Framework, Instrument Espresso Testing.</p>
+                        <p><b>• Relational Databases:</b> Use of Java Database Connectivity (JDBC) and SQL to access and query a number of DB
+                            technologies including: MySQL, Microsoft SQL Server, Oracle, Postgre, and more.</p>
+                        <p><b>• Knowledge Graphs and Semantic Web:</b> Experience querying data (using SPARQL), mapping data (using RML – RDF
+                            Mapping Language), and defining data with ontologies (through OWL and TTL) for Linked Data Structures. Hands
+                            on with technologies such as Amazon Neptune, Stardog, GraphDB, Blazegraph, Allegrograph, and more.</p>
+                        <p><b>• Property Graphs:</b> The transformation of RDF Semantic data to support Property graphs such as Neo4j while
+                            adhering to Apache TinkerPop to allow for graph traversal (through Gremlin) and querying (using Cypher).</p>
+                        <p><b>• Message Queues:</b> Considerable hands on with Apache Kafka, both in application code, and in local and docker
+                            environments, setting up secure and encrypted clusters of Producers and Consumers.</p>
+                        <p><b>• RESTful APIs:</b> Exposure of endpoints to allow for RESTful calls to backend code.</p>
+                        <p><b>• Android App Development:</b> In native Java, incorporating XML, SQL, Google APIs, and other technologies.</p>
                         <p><b>• Scripting:</b> BASH, VIM, Perl, Python</p>
-                        <p><b>• Testing:</b> Robot Framework, JMockit, JUnit 4, Instrument Espresso Testing</p>
-                        <p><b>• Wireframing:</b> JustInMind, Balsamiq</p>
-                        <p>• Operating Systems: Experienced with Windows and an array of Linux Distributions, both natively and within a VM</p>
-                        <p>• Microsoft Office software applications (including Word, Excel, PowerPoint, and more)</p>
+                        <p>• Operating Systems: Experienced with Windows, MacOS, and an array of Linux Distributions, both natively and within a VM</p>
                     </div>
 
                     <div class="card">
-                        <h3>Experience With:</h3>
-                        <p><b>• Big Data:</b> Spark, Hadoop, Amazon Web Services</p>
-                        <p>• C and C++</p>
-                        <p>• OCaml and Haskell functional languages</p>
-                        <p>• WireShark, MatLab, MIPS, Logisim, SPIN, ProMeLa</p>
+                        <h3>FRONTEND TECHNOLOGIES</h3>
+                        <p><b>• JavaScript Libraries and Frameworks:</b> React, Redux, NodeJS</p>
+                        <p><b>• Web Development Tools:</b> XML, HTML, XHTML, CSS, JavaScript, AJAX, JSON</p>
+                        <p><b>• Wireframing:</b> JustInMind, Balsamiq</p>
+                    </div>
+
+                    <div class="card">
+                        <h3>DevOps</h3>
+                        <p><b>• Amazon Web Services:</b> S3, RDS, ECR, ECS, Lambdas, IAM, VPC</p>
+                        <p><b>• Docker:</b> Building, deploying, and managing Docker containers</p>
+                        <p><b>• Development Pipelines:</b> Bitbucket Pipelines, Artifactory, Maven, Gradle</p>
+                    </div>
+
+                    <div class="card">
+                        <h3>PROJECT MANAGEMENT AND DEVELOPMENT TOOLS</h3>
+                        <p><b>• Dev Team Tools:</b> Git (GitHub), Bitbucket, Jira (Scrum, Stand ups, Retros, Burnup Charts, etc), Confluence, TDD,
+                            GitHub Flavoured Markdown, Lucidchart</p>
                     </div>
                 </div>
 
