--- a/personal.html
+++ b/personal.html
@@ -136,8 +136,8 @@
                                 <p><br><b>CPU:</b>	Intel Core i5-4690K 3.5GHz Quad-Core Processor</p>
                                 <p><b>GPU:</b>	XFX Radeon R9 390X 8GB</p>
                                 <p><b>Memory:</b>	Kingston HyperX Fury White 16GB (4 x 4GB) DDR3-1866 Memory</p>
-                                <p><b>Storage:</b>	Sandisk SSD PLUS 120GB 2.5" Solid State Drive</p>
-                                <p><b>Additional Storage:</b>	Seagate SSHD 1TB 3.5" 7200RPM Hybrid Internal Hard Drive</p>
+                                <p><b>Storage:</b>	Samsung NVMe M.2 970 Evo 1TB SSD</p>
+                                <p><b>Additional Storage:</b>	Sandisk SSD PLUS 120GB 2.5" Solid State Drive + Seagate SSHD 1TB 3.5" 7200RPM Hybrid Internal Hard Drive</p>
                                 <p><b>Motherboard:</b>	MSI Z97-GAMING 5 ATX LGA1150 Motherboard</p>
                                 <p><b>CPU Cooler:</b>	Cooler Master Hyper 212 EVO</p>
                                 <p><b>Power Supply:</b>	Corsair CX 600W 80+ Bronze</p>
